--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,16 +1,15 @@
 {%- if page.comments != false and jekyll.environment == "production" -%}
-
   <div id="disqus_thread"></div>
   <script>
     var disqus_config = function () {
-      this.page.url = '{{ page.url | absolute_url }}';
-      this.page.identifier = '{{ page.url | absolute_url }}';
+      this.page.url = '{{ site.url }}{{ site.baseurl }}{{ page.url }}';
+      this.page.identifier = '{{ page.id }}';
     };
 
     (function() {
       var d = document, s = d.createElement('script');
 
-      s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
+      s.src = 'https://{{ site.disqusname }}.disqus.com/embed.js';
 
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
